--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,13 @@
 version: '3.3'
 
+networks:
+  # Use a rede existente do proxy
+  proxy:
+    external: true
+  # Rede interna para comunicação entre seus serviços
+  internal:
+
 services:
-  # Frontend - React (build de produção)
   frontend:
     build:
       context: ./frontend
@@ -9,8 +15,9 @@ services:
     restart: always
     volumes:
       - frontend_build:/app/build
+    networks:
+      - internal
 
-  # Backend - FastAPI
   backend:
     build:
       context: ./backend
@@ -22,8 +29,14 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       - mongo
+    networks:
+      - internal
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}-backend.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api`)"
+      - "traefik.http.services.${COMPOSE_PROJECT_NAME}-backend.loadbalancer.server.port=8000"
 
-  # MongoDB
   mongo:
     image: mongo:latest
     restart: always
@@ -32,31 +45,25 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+    networks:
+      - internal
 
-  # Nginx (servidor web e proxy reverso)
   nginx:
     image: nginx:alpine
     restart: always
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx/conf:/etc/nginx/conf.d
-      - ./nginx/certbot/conf:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
       - frontend_build:/usr/share/nginx/html
+      - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
-      - backend
-
-  # Certbot para SSL
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./nginx/certbot/conf:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      - internal
+      - proxy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.${COMPOSE_PROJECT_NAME}-frontend.rule=Host(`${DOMAIN_NAME}`)"
+      - "traefik.http.services.${COMPOSE_PROJECT_NAME}-frontend.loadbalancer.server.port=80"
 
 volumes:
   mongo_data:
-  frontend_build:
+  frontend_build: 
