--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,18 +1,14 @@
 version: '3.8'
 
 networks:
-  proxy:
+  proxy-swarm:
     external: true
-    name: proxy  # A rede proxy existente
   internal:
     driver: overlay
 
 services:
   frontend:
     image: ${COMPOSE_PROJECT_NAME}_frontend
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.prod
     volumes:
       - frontend_build:/app/build
     networks:
@@ -24,16 +20,13 @@ services:
 
   backend:
     image: ${COMPOSE_PROJECT_NAME}_backend
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.prod
     environment:
       - MONGODB_URL=mongodb://mongo:27017
       - SECRET_KEY=${SECRET_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     networks:
       - internal
-      - proxy
+      - proxy-swarm
     deploy:
       replicas: 1
       restart_policy:
@@ -42,7 +35,7 @@ services:
         - "traefik.enable=true"
         - "traefik.http.routers.${COMPOSE_PROJECT_NAME}-backend.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api`)"
         - "traefik.http.services.${COMPOSE_PROJECT_NAME}-backend.loadbalancer.server.port=8000"
-        - "traefik.docker.network=proxy"
+        - "traefik.docker.network=proxy-swarm"
 
   mongo:
     image: mongo:latest
@@ -65,7 +58,7 @@ services:
       - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
     networks:
       - internal
-      - proxy
+      - proxy-swarm
     deploy:
       replicas: 1
       restart_policy:
@@ -74,7 +67,7 @@ services:
         - "traefik.enable=true"
         - "traefik.http.routers.${COMPOSE_PROJECT_NAME}-frontend.rule=Host(`${DOMAIN_NAME}`)"
         - "traefik.http.services.${COMPOSE_PROJECT_NAME}-frontend.loadbalancer.server.port=80"
-        - "traefik.docker.network=proxy"
+        - "traefik.docker.network=proxy-swarm"
 
 volumes:
   mongo_data:
