--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -55,24 +55,22 @@ services:
         condition: on-failure
 
   nginx:
-    image: nginx:alpine
-    volumes:
-      - frontend_build:/usr/share/nginx/html
-      - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - internal
-      - proxy-swarm
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
-      labels:
-        - "traefik.enable=true"
-        - "traefik.http.routers.nexiosdigital-frontend.rule=Host(`nexiosdigital.com`)"
-        - "traefik.http.services.nexiosdigital-frontend-svc.loadbalancer.server.port=80"
-        # Ajustando para o modo Swarm
-        - "traefik.docker.lbswarm=true"
-        - "traefik.constraint-label=traefik-public"
+  image: nginx:alpine
+  volumes:
+    - frontend_build:/usr/share/nginx/html
+    - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
+  ports:
+    - "8080:80"  # Expor diretamente na porta 8080
+  networks:
+    - internal
+  deploy:
+    replicas: 1
+    restart_policy:
+      condition: on-failure
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.nexiosdigital-frontend.rule=Host(`nexiosdigital.com`)"
+      - "traefik.http.services.nexiosdigital-frontend-svc.loadbalancer.server.port=80"
 
 volumes:
   mongo_data:
