--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,9 +1,8 @@
 version: '3.8'
 
 networks:
-  proxy-swarm:
+  NexiosNet:
     external: true
-    name: NexiosNet
   internal:
     driver: overlay
 
@@ -27,7 +26,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     networks:
       - internal
-      - proxy-swarm
+      - NexiosNet
     deploy:
       replicas: 1
       restart_policy:
@@ -35,10 +34,10 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.nexiosdigital-backend.rule=Host(`nexiosdigital.com`) && PathPrefix(`/api`)"
-        - "traefik.http.services.nexiosdigital-backend-svc.loadbalancer.server.port=8000"
-        # Ajustando para o modo Swarm
-        - "traefik.docker.lbswarm=true"
-        - "traefik.constraint-label=traefik-public"
+        - "traefik.http.services.nexiosdigital-backend.loadbalancer.server.port=8000"
+        - "traefik.http.routers.nexiosdigital-backend.entrypoints=websecure"
+        - "traefik.http.routers.nexiosdigital-backend.tls.certresolver=letsencryptresolver"
+        - "traefik.docker.network=NexiosNet"
 
   mongo:
     image: mongo:latest
@@ -55,23 +54,25 @@ services:
         condition: on-failure
 
   nginx:
-  image: nginx:alpine
-  volumes:
-    - frontend_build:/usr/share/nginx/html
-    - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
-  ports:
-    - "8080:80"  # Expor diretamente na porta 8080
-  networks:
-    - internal
-  deploy:
-    replicas: 1
-    restart_policy:
-      condition: on-failure
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.nexiosdigital-frontend.rule=Host(`nexiosdigital.com`)"
-      - "traefik.http.services.nexiosdigital-frontend-svc.loadbalancer.server.port=80"
+    image: nginx:alpine
+    volumes:
+      - frontend_build:/usr/share/nginx/html
+      - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - internal
+      - NexiosNet
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.nexiosdigital-frontend.rule=Host(`nexiosdigital.com`)"
+        - "traefik.http.services.nexiosdigital-frontend.loadbalancer.server.port=80"
+        - "traefik.http.routers.nexiosdigital-frontend.entrypoints=websecure"
+        - "traefik.http.routers.nexiosdigital-frontend.tls.certresolver=letsencryptresolver"
+        - "traefik.docker.network=NexiosNet"
 
 volumes:
   mongo_data:
-  frontend_build: 
+  frontend_build:
