--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -7,16 +7,21 @@ networks:
     driver: overlay
 
 services:
-  frontend:
-    image: nexiosdigital_frontend:latest
-    volumes:
-      - frontend_build:/app/build
+  nginx:
+    image: nexiosdigital_frontend:latest  # Usar diretamente a imagem do frontend
     networks:
-      - internal
+      - NexiosNet
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.nexiosdigital-frontend.rule=Host(`nexiosdigital.com`) || Host(`www.nexiosdigital.com`)"
+        - "traefik.http.services.nexiosdigital-frontend.loadbalancer.server.port=80"
+        - "traefik.http.routers.nexiosdigital-frontend.entrypoints=websecure"
+        - "traefik.http.routers.nexiosdigital-frontend.tls.certresolver=letsencryptresolver"
+        - "traefik.docker.network=NexiosNet"
 
   backend:
     image: nexiosdigital_backend:latest
@@ -33,7 +38,7 @@ services:
         condition: on-failure
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.nexiosdigital-backend.rule=Host(`nexiosdigital.com`) && PathPrefix(`/api`)"
+        - "traefik.http.routers.nexiosdigital-backend.rule=Host(`nexiosdigital.com`) || Host(`www.nexiosdigital.com`) && PathPrefix(`/api`)"
         - "traefik.http.services.nexiosdigital-backend.loadbalancer.server.port=8000"
         - "traefik.http.routers.nexiosdigital-backend.entrypoints=websecure"
         - "traefik.http.routers.nexiosdigital-backend.tls.certresolver=letsencryptresolver"
@@ -53,26 +58,5 @@ services:
       restart_policy:
         condition: on-failure
 
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - frontend_build:/usr/share/nginx/html
-      - ./nginx/custom.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - internal
-      - NexiosNet
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
-      labels:
-        - "traefik.enable=true"
-        - "traefik.http.routers.nexiosdigital-frontend.rule=Host(`nexiosdigital.com`)"
-        - "traefik.http.services.nexiosdigital-frontend.loadbalancer.server.port=80"
-        - "traefik.http.routers.nexiosdigital-frontend.entrypoints=websecure"
-        - "traefik.http.routers.nexiosdigital-frontend.tls.certresolver=letsencryptresolver"
-        - "traefik.docker.network=NexiosNet"
-
 volumes:
   mongo_data:
-  frontend_build:
