--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -8,7 +8,7 @@ networks:
 
 services:
   nginx:
-    image: nexiosdigital_frontend:latest  # Usar diretamente a imagem do frontend
+    image: nexiosdigital_frontend:latest
     networks:
       - NexiosNet
     deploy:
@@ -21,6 +21,7 @@ services:
         - "traefik.http.services.nexiosdigital-frontend.loadbalancer.server.port=80"
         - "traefik.http.routers.nexiosdigital-frontend.entrypoints=websecure"
         - "traefik.http.routers.nexiosdigital-frontend.tls.certresolver=letsencryptresolver"
+        - "traefik.http.routers.nexiosdigital-frontend.priority=100"
         - "traefik.docker.network=NexiosNet"
 
   backend:
@@ -42,6 +43,7 @@ services:
         - "traefik.http.services.nexiosdigital-backend.loadbalancer.server.port=8000"
         - "traefik.http.routers.nexiosdigital-backend.entrypoints=websecure"
         - "traefik.http.routers.nexiosdigital-backend.tls.certresolver=letsencryptresolver"
+        - "traefik.http.routers.nexiosdigital-backend.priority=90"
         - "traefik.docker.network=NexiosNet"
 
   mongo:
