--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@hookform/resolvers": "^3.3.2",
     "axios": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
