--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,11 @@
     "web-vitals": "^4.2.4",
     "yup": "^1.3.2"
   },
+  "overrides": {
+    "serialize-javascript": "^6.0.2",
+    "postcss": "^8.4.31",
+    "nth-check": "^2.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
